apps/vault/kubernetes/vault.ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: vault
  name: vault
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
