apps/vault/kubernetes/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, DELETE, PATCH, OPTIONS'
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: may0620
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
  - host: vault.gwdc.org.au
    http:
      paths:
      - path: /
        backend:
          serviceName: may0620-vault
          servicePort: 8200
